turbopack/crates/turbo-tasks-macros-tests/tests/derive_non_local_value/fail_simple_named_struct.rs
#![allow(dead_code)]

use turbo_tasks::NonLocalValue;

struct UnresolvedValue;

#[derive(NonLocalValue)]
struct ContainsUnresolvedValueNamed {
    a: UnresolvedValue,
}

fn main() {}
